# grpc-poc

./: .gitignore  README.md  docker-compose.yml
Dockerfiles/: db.Dockerfile  discount.Dockerfile  product.Dockerfile
databases/: entryopoint.sh
protos/: discount.proto
services/discount/: Cargo.toml  build.rs
services/discount/src/: discount_types.rs  lib.rs  main.rs
services/product/: Makefile  go.mod  go.sum  main.go
services/product/mocks/: DiscountClient.go  DiscountServer.go  DiscountServiceClient.go
services/product/proto/: discount.pb.go
services/product/src/: app.go
services/product/src/adapters/: discount.go
services/product/src/handlers/: container.go  product.handler.go
services/product/src/libs/databases/: postgres.go
services/product/src/repositories/: container.go  product.querybuilder.go  product.repository.go  product.repository_test.go  user.querybuilder.go  user.repository.go  user.repository_test.go
services/product/src/rpc/: container.go  discount.client.go  discount.client_test.go  rpc_client.go
services/product/src/structs/: structs.go
